# python-starter-template

./: .copilot-commit-instructions.md  .copilot-instructions.md  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .python-dev-guidelines.md  .yamllint  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  bumpversion.cfg  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt  version_file_template.txt
.github/: copilot-commit-instructions.md  copilot-instructions.md
.github/chatmodes/: architect.chatmode.md  debugger.chatmode.md  reviewer.chatmode.md
.github/instructions/: code-review.instructions.md  documentation.instructions.md  performance.instructions.md  python.instructions.md  security.instructions.md  testing.instructions.md
.github/prompts/: code-review.prompt.md  commit.prompt.md  debug-issue.prompt.md  generate-docs.prompt.md  refactor-code.prompt.md  setup-component.prompt.md  write-tests.prompt.md
.github/workflows/: CI.yml  bump_minor.yml  ci-cd.yml  copilot-setup-steps.yml
config/: config.example.ini
config_samples/: logging.ini.sample
docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: TESTS_FAKE_MODULES.md  api.md  architecture.md  configuration.md  db_migrations.md  deployment.md  index.md  installation.md  releases.md  todo_upgrade.md
newsfragments/: template.md  upgrade.feature
scripts/: init_env.ps1  init_env.sh
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/architecture/: index.html
site/configuration/: index.html
site/deployment/: index.html
site/installation/: index.html
site/releases/: index.html
site/search/: search_index.json
site/todo_upgrade/: index.html
src/: main.py
src/app/: __init__.py  _version.py  api.py  application.py
src/app/core/: exceptions.py  logs.py  metrics.py  settings.py
src/app/db/: connection.py
src/app/handlers/: user_handler.py
src/app/models/: user.py
src/app/repo/: user_repository.py
src/app/services/: email_notifier.py  logs.py  user_service.py
src/config/: config.py
src/services/: args.py  email_notifier.py  logs.py
tests/: TESTS_FAKE_MODULES.md  test_api.py  test_api_playwright.py  test_application.py  test_application_error.py  test_core_exceptions.py  test_core_metrics.py  test_core_settings.py  test_db_connection.py  test_db_connection_module.py  test_email_notifier.py  test_exceptions.py  test_handlers.py  test_logs.py  test_main_module.py  test_models.py  test_models_user.py  test_services_email_notifier.py  test_services_logs.py  test_services_user_service.py  test_settings.py  test_settings_env.py  test_user_handler.py  test_user_handler_module.py  test_user_service.py  test_version_module.py
